# FilamentHub

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .cursorrules  .env.template  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  CODEX_HANDOFF.md  COMMIT_PLAN.md  COMMIT_README.md  DEPLOYMENT.md  DEPLOYMENT_REPORT.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  ORCASLICER_UPDATE_GUIDE.md  PLAN_DATA_CLEANUP.md  README.md  REDEPLOYMENT_REPORT.md  ROADMAP.md  SYNC_PRINTERS_FIX.md  SYNC_PROBLEMS_ANALYSIS.md  TODO.md  TODO_CONSOLIDATED.md  TODO_Main.md  cursor_released_server_update_issues.md  docker-compose.dev.yml  docker-compose.yml  log.lnk  plan.md  readme.txt  setup_orcaslicer_fork.ps1  setup_orcaslicer_submodule.ps1  start.ps1
backend/: .env.example  .env.test  .gitignore  DEPLOY_FULL.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.prod  QUICKSTART.md  README.md  RUN_INSTRUCTIONS.md  SETUP.md  STATUS.md  alembic.ini  create_presets.sql  create_tables.sql  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml  quickstart.ps1  run.py  start_local.ps1  test_admin.py
backend/alembic/: env.py
backend/alembic/versions/: 042335145290_add_user_spools.py  0b9a467f6918_add_user_model.py  0de996edecbd_rename_sync_enabled_to_sync.py  15e8c75b2ab5_merge_multiple_heads.py  1a99f4734fc4_initial_migration_brand_filament_preset_.py  20251215_174637_change_tags_to_json.py  20260606_add_preset_versions.py  20260715_active_brand_membership_only.py  47f92b78c02f_add_user_id_to_presets.py  4d25fedc35e5_merge_wiki_and_main_branches.py  4de32f3e4fc1_add_user_sync_settings_fields.py  572fc7e611e3_add_user_saved_presets_table.py  5752bb11b46d_add_proof_files_to_printer_requests.py  63fbb1d88128_add_preset_slot_core.py  7d567a4a6107_add_visual_settings_to_filaments.py  (+79 more)
backend/app/: __init__.py  main.py
backend/dev_scripts/: README.md
backend/distributions/: .gitkeep
backend/geoip/: README.md
backend/sql/: seed_wiki_content.sql
backend/static/: index.html
backend/tests/: brand_usage_test.py  calculator_gcode_parser_test.py  compatible_printers_export_test.py  conftest.py  crm_workspace_test.py  email_communications_test.py  geoip_oauth_test.py  hh_snapshot_regression_test.py  identifier_length_guard_test.py  material_contract_test.py  material_mapping_service_test.py  orca_printer_identity_test.py  orcaslicer_exporter_test.py  physical_printer_discovery_test.py  preset_enrichment_volumetric_test.py  preset_matcher_test.py  preset_moderation_test.py  preset_recommender_median_test.py  preset_slot_sync_service_test.py  preset_version_service_test.py  preset_visibility_test.py  printer_connection_observation_test.py  privacy_columns_guard_test.py  qr_backfill_test.py  recommended_for_configuration_test.py  saved_preset_scope_test.py  shared_quote_security_test.py  spool_compat_test.py  spool_location_test.py  spool_service_patch_semantics_test.py  subscription_service_test.py  test_admin.py  test_auth.py  test_brand_invites.py  test_brand_slugs.py  test_brand_team.py  test_brands.py  test_calculator.py  test_filaments.py  test_health.py  (+9 more)
orca-plugin/: CHANGELOG.md  PR_14530_COMMENT_DRAFT.md  README.md  build_package.py  filamenthub_plugin.py  pyproject.toml
orca-plugin/tests/: test_filamenthub_plugin.py
(+825 files in other folders)
