[project]
name = "filamenthub-backend"
version = "0.1.0"
description = "FilamentHub Backend API"
authors = [
    {name = "FilamentHub Team"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.40.0",
    "sqlalchemy[asyncio]~=2.0.35",
    "asyncpg~=0.30.0",
    "alembic~=1.15.0",
    "pydantic~=2.10.0",
    "pydantic-settings~=2.7.0",
    "email-validator~=2.2.0",
    "PyJWT[crypto]~=2.9.0",
    "bcrypt~=5.0.0",
    "python-multipart~=0.0.22",
    "redis~=5.2.0",
    "httpx~=0.28.0",
    "python-dotenv~=1.0.0",
    "slowapi~=0.1.9",
    "qrcode[pil]~=7.4.2",  # Генерация QR-кодов
    "better-profanity~=0.7.0",  # Проверка плохих слов
    "weasyprint~=63.0",  # HTML-to-PDF for quote generation
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.24.0",
    "pytest-cov~=6.0.0",
    "aiosqlite~=0.20.0",  # For async SQLite tests (in-memory)
    "ruff~=0.8.0",
    "mypy~=1.13.0",
    "black~=24.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "passlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

